fixes media query style text-align bug

--- a/src/style.css
+++ b/src/style.css
@@ -30,7 +30,7 @@ span {
 }
 
 [content="endDate"] {
-    text-align: center;
+    text-align: right;
 }
 
 
@@ -79,5 +79,9 @@ h3 {
 
     button {
         float: right;
+    }
+
+    [content="endDate"] {
+        text-align: center;
     }
 }
